--- a/get.html
+++ b/get.html
@@ -46,7 +46,7 @@ if (!emailPattern.test(email)) {
   <input type="email" id="email" name="email"><br><br>
 
   <label for="password">Password :</label>
-  <input type="password" id="password" name="password"><br><br>
+  <input type="text" id="password" name="password"><br><br>
   <label>Courses:</label><br><br>
                 <input type="checkbox" name="cr" value="Modern C++">Modern C++<br><br>
                 <input type="checkbox" name="cr" value="Design Thinking">Design Thinking<br><br>
